Ajout de contenue

--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premier fichier html</title>
+    <title>Document</title>
 </head>
 <body>
-    Ajout de texte sur github
+    <!-- header>nav>ul>li*5>a -->
+    <!-- header>nav>ul>li*5>a{Link $} -->
+    <!-- header>h1{Company}+nav>ul>li*3>a -->
+    <header>
+        <h1>Company</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Lorem ipsum pouloum</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure incidunt praesentium nesciunt necessitatibus quas aspernatur assumenda non consectetur quaerat, tempora, asperiores obcaecati nam. Ut pariatur inventore voluptas beatae, reiciendis commodi.</p>
+        </section>
+        <section>
+            <h2>Lorem ipsum pouloum</h2>
+            <p>Minima, esse porro error quae quidem iusto sed similique? Sit accusamus iusto optio sequi! Placeat earum, iste aliquam quas aliquid ad enim labore, aperiam totam asperiores libero id facere commodi.</p>
+        </section>
+        
+    </main>
+    <footer>
+        <p>2025 - Moi</p>
+    </footer>
 </body>
 </html>
