Ajout reset et normalize

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML / CSS</title>
+    <!-- <link rel="stylesheet" href="./normalize.css"> -->
+    <!-- <link rel="stylesheet" href="./reset.css"> -->
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!-- header>nav>ul>li*5>a -->
     <!-- header>nav>ul>li*5>a{Link $} -->
     <!-- header>h1{Company}+nav>ul>li*3>a -->
-    <header>
-        <h1>Company</h1>
+    <header class="header">
+        <h1 id="header-title">Company</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -21,7 +23,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="header bold">
             <h2>Lorem ipsum pouloum</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure incidunt praesentium nesciunt necessitatibus quas aspernatur assumenda non consectetur quaerat, tempora, asperiores obcaecati nam. Ut pariatur inventore voluptas beatae, reiciendis commodi.</p>
         </section>
