Ajout style couleur

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <main>
         <section class="header bold">
             <h2>Lorem ipsum pouloum</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure incidunt praesentium nesciunt necessitatibus quas aspernatur assumenda non consectetur quaerat, tempora, asperiores obcaecati nam. Ut pariatur inventore voluptas beatae, reiciendis commodi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span class="display">Iure incidunt praesentium nesciunt</span> necessitatibus quas aspernatur assumenda non consectetur quaerat, tempora, asperiores obcaecati nam. Ut pariatur inventore voluptas beatae, reiciendis commodi.</p>
         </section>
         <section>
             <h2>Lorem ipsum pouloum</h2>
-            <p>Minima, esse porro error quae quidem iusto sed similique? Sit accusamus iusto optio sequi! Placeat earum, iste aliquam quas aliquid ad enim labore, aperiam totam asperiores libero id facere commodi.</p>
+            <p class="font-color">Minima, esse porro error quae quidem iusto sed similique? Sit accusamus iusto optio sequi! Placeat earum, iste aliquam quas aliquid ad enim labore, aperiam totam asperiores libero id facere commodi.</p>
         </section>
         
     </main>
